# automation

./: README.md  automation.py  emails.txt  phone.txt  pyproject.toml
