[tool.poetry]
name = "automation"
version = "0.1.0"
description = ""
authors = ["Brendan Welzien <brendanwelzien@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
regex = "^2020.11.13"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^20.8b1", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
